# PyMCP-FS

./: README.md  main.py  pyproject.toml  test_mcp_server.py
tests/: test_mcp_filesystem.py
